# NeuroFeed

./: .env.example  .gitignore  DESIGN.md  NeuroFeed_Deployment_Implementation_Plan.md  Qs.txt  README.md  context.md  loading.html  package-lock.json  render.yaml
apps/api/: pyproject.toml
apps/api/neurofeed/: config.py  deps.py  main.py
apps/api/neurofeed/routers/: actions.py  analytics.py  documents.py  feed.py  gamify.py  health.py  ingest.py  llm.py  messages.py  reels.py  social.py  tts.py  tutor.py
apps/api/neurofeed/services/: chunk.py  embed.py  gamify.py  generate.py  mastery.py  parse.py  rag.py  rank.py  tts.py
apps/api/neurofeed/services/llm/: featherless.py  groq.py  json_gen.py  router.py  schemas.py
apps/api/neurofeed/workers/: bus.py  jobs.py
apps/web/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/android/app/: build.gradle
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
infra/supabase/: match_chunks.sql  schema.sql
infra/supabase/migrations/: 2026-06-19_interest_events.sql  2026-06-22_social.sql  2026-06-23_multiplayer.sql  2026-06-28_doc_hidden_from_owner.sql  2026-06-28_messages.sql  2026-06-28_reel_engagement.sql
neurofeed frontend/Auth/: magiclinksignin.html  magiclinksignup.html  signin.html  signup.html
neurofeed frontend/home/: 1stpage.html  challenges.html  create.html  explore.html
neurofeed frontend/profile dashboard/: achievements.html  activity.html  bookmarks,html  notifications.html  profilemain.html  stats.html  uploads.html
(+74 files in other folders)
