[project]
name = "neurofeed-api"
version = "0.0.1"
description = "NeuroFeed FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "supabase>=2.7.4",
  "redis>=5.0.8",
  "arq>=0.26.1",
  "fastembed>=0.3.6",
  "pymupdf>=1.24.9",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "tenacity>=9.0.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.3",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neurofeed*"]

[tool.ruff]
line-length = 100
target-version = "py311"
